app/bijux.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: graffback-api
    process: web
  name: graffback-api-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: graffback-api
      process: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: graffback-api
        process: web
    spec:
      containers:
        - env:
            - name: PORT
              value: "5000"
          image: docker.io/romaofr/graffback:1.2
          imagePullPolicy: IfNotPresent
          name: graffback-api-web
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /dashboard
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /data
              name: grafana-storage
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage-pvc
