app/graffback-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graffback-api-ingress
  labels:
    app: graffback-api-service
  #namespace: postgres
  #annotations:
  #  nginx.ingress.kubernetes.io/use-regex: "true"
  #  nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx  # Classe de Ingress para Nginx
  rules:
    - host: graffback-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graffback-api-service
                port:
                  number: 5000
