app/graffback-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: graffback-network
  namespace: postgres
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/graffback-network: "true"
  podSelector:
    matchLabels:
      network/graffback-network: "true"
